Convert to java 11 for sonatype jdk supportt